# kestrelchat-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  dendryte.example.toml  kestrel.example.toml  perf.data  rustfmt.toml  schema.sql
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: performance.yml
.github/workflows/: rust.yaml  security-audit.yml  validate-pr-title.yml
.github/workflows/.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
assets/: ua-regexes.yaml
crates/app/: Cargo.toml  Dockerfile
crates/app/src/: lib.rs  main.rs
crates/app/src/catchers/: mod.rs  too_many_requests.rs
crates/app/src/guards/: rate_limit.rs
crates/app/src/routes/: meta.rs
crates/app/src/routes/auth/: change_password.rs  list_sessions.rs  login.rs  manage_totp.rs  mod.rs  register.rs  reset_password.rs  revoke_session.rs
crates/app/src/routes/guilds/: create_guild.rs  delete_guild.rs  get_guild.rs  update_guild.rs
crates/app/src/routes/users/: count_users.rs  create_relationship.rs  get_relationships.rs
crates/app/src/utils/: auth_context.rs  cors.rs  errors.rs  mod.rs  totp_secret.rs
crates/app/tests/: mfa.rs  rate_limiting.rs  relationships.rs
crates/app/tests/common/: mod.rs
crates/libs/common/: Cargo.toml
crates/libs/common/src/: lib.rs
crates/libs/common/src/hcaptcha/: handler.rs  mod.rs
crates/libs/common/src/models/: account.rs  mod.rs  relationship.rs  session.rs  user.rs
crates/libs/common/src/token/: decode.rs  encode.rs  error.rs  mod.rs  spec.rs  types.rs
crates/libs/common/src/utils/: base32.rs  geoip.rs  hasher.rs  mod.rs  normalize.rs  totp.rs  user_agent.rs
crates/libs/common/src/utils/validation/: email.rs  mod.rs  password.rs  username.rs
crates/libs/config/: Cargo.toml
crates/libs/config/src/: config.rs  errors.rs  lib.rs
crates/libs/config/src/structs/: api.rs  config.rs  database.rs  features.rs  hcaptcha.rs  instance.rs  mod.rs  network.rs  server.rs
crates/libs/database/: Cargo.toml  new_migration.py
crates/libs/database/migrations/: 20260425054031_create_accounts.sql
crates/libs/database/src/: connection.rs  error.rs  lib.rs
crates/libs/database/src/models/: mod.rs
crates/libs/postgres/: Cargo.toml
crates/libs/postgres/migrations/: 20260509114041_create_sessions.sql  20260526234144_add_session_user_id_index.sql  20260527203813_add_totp_secret.sql  20260531225820_create_relationships.sql
crates/libs/postgres/src/: connection.rs  error.rs  lib.rs
crates/libs/postgres/src/operations/: mod.rs
crates/libs/postgres/src/operations/account/: change_password.rs  create_account.rs  lookup_account.rs  mod.rs  set_totp_secret.rs
crates/libs/postgres/src/operations/guilds/: create_guild.rs  delete_guild.rs  get_guild.rs  update_guild.rs
crates/libs/postgres/src/operations/relationships/: create_relationship.rs  delete_relationship.rs  get_relationships.rs  mod.rs
crates/libs/postgres/src/operations/sessions/: create_session.rs  fetch_session.rs  lookup_sessions.rs  mod.rs  revoke_all_sessions.rs  revoke_session.rs
crates/libs/postgres/src/operations/user/: batch_get_user_summaries.rs  count_users.rs  create_user.rs  mod.rs
crates/libs/redis/: Cargo.toml
crates/libs/redis/src/: connection.rs  error.rs  lib.rs
crates/libs/redis/src/operations/: mod.rs
crates/libs/redis/src/utils/: mod.rs  protected_pending_mfa.rs
crates/services/api/: Cargo.toml  Dockerfile
crates/services/api/src/: lib.rs  main.rs
crates/services/api/src/routes/: meta.rs  mod.rs
crates/services/api/src/routes/auth/: change_password.rs  fetch_session.rs  list_sessions.rs  login.rs  manage_totp.rs  mod.rs  register.rs  reset_password.rs  revoke_session.rs
crates/services/api/src/routes/guilds/: create_guild.rs  delete_guild.rs  get_guild.rs  mod.rs  update_guild.rs
crates/services/api/src/routes/users/: create_relationship.rs  delete_relationship.rs  get_self.rs  mod.rs
crates/services/api/src/utils/: auth_context.rs  cors.rs  errors.rs  mod.rs  request_context.rs  totp_secret.rs
crates/services/api/tests/: hello_world.rs  mfa.rs  register.rs
crates/services/api/tests/common/: mod.rs
crates/services/gateway/: Cargo.toml  Dockerfile
crates/services/gateway/src/: gateway.rs  main.rs  opcode.rs  protocol.rs
crates/services/gateway/src/gateway/: connection.rs  mod.rs  router.rs
crates/services/gateway/src/handlers/: heartbeat.rs  identify.rs  mod.rs
crates/services/gateway/src/protocol/: dispatch.rs  mod.rs  opcode.rs  packet.rs
migrations/: 20260502010406_create_users.sql  20260617090746_create_guilds.sql
scripts/: check-headers.sh  database-tools.sh  generate-users.py  get-all-deps.py  new_migration.py
src/: errors.rs  lib.rs  main.rs
src/adapters/: base32.rs  mod.rs  totp.rs  user_agent.rs
src/adapters/crypto/: hasher.rs
src/adapters/hcaptcha/: handler.rs
src/api/: mod.rs
src/api/catchers/: too_many_requests.rs
src/api/fairings/: cors.rs
src/api/guards/: auth_context.rs  mod.rs  rate_limit.rs  request_context.rs
src/api/routes/: meta.rs  mod.rs
src/api/routes/auth/: change_password.rs  list_sessions.rs  login.rs  manage_totp.rs  register.rs  reset_password.rs  revoke_session.rs
src/api/routes/guilds/: create_guild.rs  delete_guild.rs  get_guild.rs  update_guild.rs
src/api/routes/users/: count_users.rs  create_relationship.rs  delete_relationship.rs  get_relationships.rs  get_self.rs
src/config/: errors.rs  mod.rs
src/config/structs/: mod.rs  server.rs
src/database/postgres/: connection.rs
src/database/postgres/operations/: mod.rs
src/database/postgres/operations/account/: change_password.rs  create_account.rs  lookup_account.rs  set_totp_secret.rs
src/database/postgres/operations/guilds/: create_guild.rs  delete_guild.rs  get_guild.rs  mod.rs  update_guild.rs
src/database/redis/: connection.rs
src/models/: guild.rs  mod.rs  session.rs
src/models/token/: decode.rs  encode.rs  mod.rs  types.rs
src/models/user/: account.rs  email.rs  mod.rs  password.rs  profile.rs  username.rs
tests/: mfa.rs  register.rs  relationships.rs
tests/common/: mod.rs
(+49 files in other folders)
