[workspace]
resolver = "2"
members = [
    "crates/libs/common",
    "crates/libs/config",
    "crates/libs/postgres",
    "crates/libs/redis",
    "crates/app",
]

[workspace.dependencies]
# Internal crates
kestrel_common = { version = "0.1.0", path = "crates/libs/common" }
kestrel_config = { version = "0.1.0", path = "crates/libs/config" }
kestrel_postgres = { version = "0.1.0", path = "crates/libs/postgres" }
kestrel_redis = { version = "0.1.0", path = "crates/libs/redis" }

# External crates
argon2 = "0.5.3"
base64 = "0.22.1"
blake3 = "1.8.5"
chrono = { version = "0.4.44", features = ["serde"] }
chacha20poly1305 = "0.10.1"
once_cell = "1.21.4"
rand = { version = "0.10.1", features = ["sys_rng"] }
redis = { version = "1.2.1", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13.3", features = ["json"] }
rocket = "0.5.1"
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono"] }
thiserror = "2.0.18"
toml = "1.1.2"
uaparser = "0.6.4"
ulid = "1.2.1"
rocket_ws = "0.1.1"
hcaptcha = "3.2.1"
testcontainers-modules = { version = "0.15.0", features = ["postgres", "redis"] }
totp-rs = { version = "5.7.1", features = ["zeroize"] }
zeroize = { version = "1.8.2", features = ["derive"] }
