[workspace]
resolver = "2"

[package]
name = "dendryte"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
base32 = "0.5.1"
base64 = "0.22.1"
blake3 = "1.8.5"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.44", features = ["serde"] }
hcaptcha = "3.2.1"
rand = { version = "0.10.1" }
redis = { version = "1.2.1", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13.3", features = ["json"] }
rocket = "0.5.1"
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
rustc-hash = "2.1.2"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio-native-tls"] }
thiserror = "2.0.18"
toml = "1.1.2"
totp-rs = { version = "5.7.1", features = ["zeroize"] }
uaparser = "0.6.4"
ulid = "1.2.1"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
testcontainers-modules = { version = "0.15.0", features = ["postgres", "redis"] }
