[package]
name = "kestrel_server"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
kestrel_common = { workspace = true, features = ["geoip", "user_agent", "hcaptcha"] }
kestrel_config = { workspace = true }
kestrel_postgres = { workspace = true }
kestrel_redis = { workspace = true }
rocket = { workspace = true }
rocket_okapi = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
ulid = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
testcontainers-modules = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
