[package]
name = "kestrel_common"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
chrono = "0.4.44"
once_cell = "1.21.4"
rand = { version = "0.10.1", features = ["sys_rng"] }
reqwest = "0.13.3"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono"] }
uaparser = "0.6.4"
