[package]
name = "kestrel_common"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uaparser = { workspace = true }
