[package]
name = "kestrel_common"
version = "0.1.0"
edition = "2024"

[features]
geoip = ["dep:reqwest"]
user_agent = ["dep:uaparser", "dep:once_cell"]
hcaptcha = ["dep:hcaptcha"]

[dependencies]
argon2 = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true, optional = true }
rand = { workspace = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
totp-rs = { workspace = true }
uaparser = { workspace = true, optional = true }
hcaptcha = { workspace = true, optional = true }
schemars = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
zeroize = { workspace = true }
