[package]
name = "kestrel_api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
kestrel_common = { workspace = true }
kestrel_config = { workspace = true }
kestrel_postgres = { workspace = true }
kestrel_redis = { workspace = true }
rocket = { workspace = true }
rocket_okapi = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
ulid = { workspace = true }
